# pipetrick

./: .gitignore  CMakeLists.txt  README.md  client.cpp  client.h  common.cpp  common.h  log.h  main  main.cpp  makefile  output.txt  p.pa  server  server.cpp  server.h  test  test.cpp
src/: CMakeLists.txt  client.cpp  client.h  common.cpp  common.h  log.cpp  server.cpp  server.h
testApps/: CMakeLists.txt  main.cpp  test.cpp  test.h  valgrind_check.h
